<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".fragments.ServiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_top">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:layout_marginTop="10dp"
                style="@style/TextName"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:background="@drawable/bg_button_rounded">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back"
                android:background="@drawable/bg_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order History"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/TextButton"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_profile"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_title"
                        style="@style/TextBlackTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        style="@style/TextDescription"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_phone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_title"
                        style="@style/TextBlackTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        style="@style/TextDescription"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_email"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title"
                        style="@style/TextBlackTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        style="@style/TextDescription"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_address"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address_title"
                        style="@style/TextBlackTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        style="@style/TextDescription"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_cake_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Birthday"
                        style="@style/TextBlackTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11/15/1995"
                        style="@style/TextDescription"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>